wal-macros/tests/html_macro_tests/ifs/if_let_fail.rs
use wal_macros::html;

fn main() {
    html! { if let };
    html! { if let {} };
    html! { if let true {}};
    html! { if let {} {} };
}